# planforge

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  package.json  planforge.cmd  planforge.json  pnpm-lock.yaml  pyproject.toml
.cursor/rules/: cross-platform.mdc  no-prompt-fallback.mdc  node-python-symmetry.mdc  planforge-cursor-agent-terminal.mdc  planforge-workflow.mdc  pr-writing.mdc  provider-symmetry.mdc  workflow.mdc
.cursor/skills/i/: SKILL.md
.cursor/skills/i/prompts/: system.md
.cursor/skills/i/scripts/: run_implement.ps1  run_implement.py  run_implement.sh
.cursor/skills/p/: SKILL.md
.cursor/skills/p/prompts/: system.md
.cursor/skills/p/scripts/: run_plan.ps1  run_plan.py  run_plan.sh
.github/workflows/: auto-assign.yml  pr-build.yml  release-js.yml  release-py.yml
docs/: architecture.md  installation.md  roadmap.md
scripts/: bootstrap.sh  release-js.sh  release-py.sh  validate_cursor_assets.mjs
templates/config/: default-both.json  default-claude-only.json  default-codex-only.json  planforge.json
templates/cursor/rules/: planforge-cursor-agent-terminal.mdc  workflow.mdc
templates/cursor/skills/i/: SKILL.md
templates/cursor/skills/i/scripts/: run_implement.ps1  run_implement.sh
templates/cursor/skills/p/: SKILL.md
templates/cursor/skills/p/prompts/: system.md
templates/cursor/skills/p/scripts/: run_plan.ps1  run_plan.sh
templates/doctor/: default-claude-only.json  prompts.json
templates/doctor-ai/: default-both.json  default-codex-only.json  prompts.json
