[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planforge"
version = "0.1.0"
description = "Bring your own AI to Cursor. Use Claude or Codex inside Cursor Free."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
planforge = "planforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["packages/cli-py/planforge"]
